# CS421Compilers

./: README.md
final-interpreter/: final-interpreter.cabal
final-interpreter/app/: Interpreter.hs  Main.hs
final-interpreter/src/: Lib.hs
final-interpreter/test/: Spec.hs  StudentTests.hs  Tests.hs
hw1-lambdacalc/: hw1-starter.tex
hw4-variables/: hw4-starter.tex
mp1-haskell/: gradereport.txt  mp1.hs  mp1check.hs
mp2-interpreter/: Interpreter.hs  Parser.hs  Tests.hs
mp3-cps/: .gitignore  mp3-cps.cabal  stack.yaml
mp3-cps/app/: Continuation.hs  Main.hs
mp3-cps/src/: Lib.hs
mp3-cps/test/: Autograder.hs  Spec.hs  Tests.hs
mp4-scheme/: README.md  mp4-scheme.cabal
mp4-scheme/app/: Main.hs
mp4-scheme/test/: Spec.hs  Tests.hs
mp5-types/: mp5-types.cabal  stack.yaml
mp5-types/app/: Main.hs  Parse.hs  Unifier.hs
mp5-types/src/: Lib.hs
mp5-types/test/: Autograder.hs  Spec.hs  Tests.hs
prolog-implementation-mp/: README.txt  prolog-mp.hs
prolog-maze-mp/: README.txt  given.pl
