name:                mp4-scheme
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/mp4-scheme#readme
license:             NCSA
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable scheme
    hs-source-dirs:     app
    main-is:            Main.hs
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    build-depends:      base , unordered-containers >= 0.2 , parsec
    default-language:   Haskell2010

test-suite test
    type:               exitcode-stdio-1.0
    hs-source-dirs:     app , test
    main-is:            Spec.hs
    other-modules:      Main , Tests
    build-depends:      base , unordered-containers >= 0.2 , parsec
    ghc-options:        -threaded -rtsopts -with-rtsopts=-N
    default-language:   Haskell2010
